--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -18,7 +18,7 @@ server {
 
     location /jenkins/ {
 
-        rewrite /infra-sfb/(.*) /$1 break;
+        rewrite /jenkins/(.*) /$1 break;
         proxy_pass http://jenkins:8080;
         proxy_set_header Host $host;
 
