modified rules for demo.. need permanent fix

--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -9,6 +9,15 @@ server {
 
     location / {
 
+        proxy_pass http://jenkins:8080;
+        proxy_set_header Host $host;
+
+        # re-write redirects to http as to https, example: /home
+        proxy_redirect http:// https://;
+    }
+
+    location /hide-root/ {
+
         proxy_pass http://welcomepage:80;
         proxy_set_header Host $host;
 
@@ -16,7 +25,7 @@ server {
         proxy_redirect http:// https://;
     }
 
-    location /jenkins/ {
+    location /hide-jenkins/ {
 
         rewrite /jenkins/(.*) /$1 break;
         proxy_pass http://jenkins:8080;
