--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: jenkins
 
   applauncher:
-    build: welcomepage
+    build: AppLauncher
 
   nginx-proxy:
     build: nginx-proxy
