add evn var in compose and fixed the nginx rule

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,14 @@ services:
 
   applauncher:
     build: AppLauncher
-
+    environment:
+      - JENKINS_URL=${JENKINS_URL}
+      - JENKINS_USER=${JENKINS_USER}
+      - JENKINS_PASSWORD=${JENKINS_PASSWORD}
+      - DOCKER_HUB_USER=${DOCKER_HUB_USER}
+      - DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}
+    ports:
+      - "7373:5000"
   nginx-proxy:
     build: nginx-proxy
     ports:
