--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -37,7 +37,7 @@ server {
 
     location /applauncher/ {
 
-        #rewrite /applauncher/(.*) /$1 break;
+        rewrite /applauncher/(.*) /$1 break;
         proxy_pass http://applauncher:5000;
         proxy_set_header Host $host;
 
