--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
 
   jenkins:
     image: jenkins
+    environment:
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+    ports:
+      - "8080:8080"
 
   applauncher:
     build: AppLauncher
@@ -20,4 +24,4 @@ services:
   nginx-proxy:
     build: nginx-proxy
     ports:
-      - 443:443
+      - "443:443"
