--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
 
   jenkins:
     image: jenkins
-    environment:
-      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
-    ports:
-      - "8080:8080"
+    #environment:
+    #  - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+    volumes:
+      - jenkins:/var/jenkins_home
 
   applauncher:
     build: AppLauncher
@@ -19,9 +19,12 @@ services:
       - JENKINS_PASSWORD=${JENKINS_PASSWORD}
       - DOCKER_HUB_USER=${DOCKER_HUB_USER}
       - DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}
-    ports:
-      - "7373:5000"
+
   nginx-proxy:
     build: nginx-proxy
     ports:
       - "443:443"
+
+volumes:
+   jenkins:
+     external: true
