added nginx rule to support home

--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -16,8 +16,10 @@ server {
         proxy_redirect http:// https://;
     }
 
-    location /hide-root/ {
-
+    location /home/ {
+        # NOTE: remove the rewrite rule for home, 
+        #       when the welcomepage replaces jenkins in the root 
+        rewrite /home/(.*) /$1 break;
         proxy_pass http://welcomepage:80;
         proxy_set_header Host $host;
 
