--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -16,6 +16,15 @@ server {
         proxy_redirect http:// https://;
     }
 
+    location /artifactory/ {
+
+        proxy_pass http://artifactory:8081;
+        proxy_set_header Host $host;
+
+        # re-write redirects to http as to https, example: /home
+        proxy_redirect http:// https://;
+    }
+
     location /home/ {
         # NOTE: remove the rewrite rule for home, 
         #       when the welcomepage replaces jenkins in the root 
