--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - JENKINS_URL=${JENKINS_URL}
       - JENKINS_USER=${JENKINS_USER}
       - JENKINS_PASSWORD=${JENKINS_PASSWORD}
+      - ARTIFACTORY_URL=${ARTIFACTORY_URL}
+      - ARTIFACTORY_USER=${ARTIFACTORY_USER}
+      - ARTIFACTORY_PASSWORD=${ARTIFACTORY_PASSWORD}
       - DOCKER_HUB_USER=${DOCKER_HUB_USER}
       - DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}
 
