added port export for Jenkins Swarm Plugin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     #  - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
     volumes:
       - jenkins:/var/jenkins_home
+    ports:
+      - "8080:8080"
+      - "50000:50000"
 
   applauncher:
     build: AppLauncher
