--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
     volumes:
-      - artifactory:/var/opt/jfrog/artifactory/
+      - artifactory-data:/var/opt/jfrog/artifactory/data 
+      - artifactory-logs:/var/opt/jfrog/artifactory/logs 
+      - artifactory-etc:/var/opt/jfrog/artifactory/etc 
 
   nginx-proxy:
     build: nginx-proxy
@@ -39,5 +41,9 @@ services:
 volumes:
   jenkins:
     external: true
-  artifactory:
+  artifactory-data:
+    external: true
+  artifactory-logs:
+    external: true
+  artifactory-etc:
     external: true
