fixed admin page address

--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -38,7 +38,7 @@ server {
 
     location /admin/ {
         rewrite /admin/(.*) /$1 break;
-        proxy_pass http://admin;
+        proxy_pass http://adminpage;
         proxy_set_header Host $host;
 
         # re-write redirects to http as to https, example: /home
