--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,19 @@
-version: "2"
+version: "3.1"
 
 services:
   welcomepage:
     build: welcomepage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
   adminpage:
     build: adminpage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
   jenkins:
     image: jenkins
@@ -16,6 +24,10 @@ services:
     ports:
       - "8080:8080"
       - "50000:50000"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
   applauncher:
     build: AppLauncher
@@ -30,6 +42,10 @@ services:
       - DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}
     depends_on:
       - jenkins
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
@@ -37,6 +53,10 @@ services:
       - artifactory-data:/var/opt/jfrog/artifactory/data 
       - artifactory-logs:/var/opt/jfrog/artifactory/logs 
       - artifactory-etc:/var/opt/jfrog/artifactory/etc 
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
   nginx-proxy:
     build: nginx-proxy
@@ -48,6 +68,10 @@ services:
       - artifactory
       - welcomepage
       - adminpage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: ${LOGSTASH_URL}
 
 volumes:
   jenkins:
