--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,9 @@ version: "3.1"
 services:
   welcomepage:
     build: welcomepage
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
   adminpage:
     build: adminpage
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
   jenkins:
     image: jenkins
@@ -24,10 +16,6 @@ services:
     ports:
       - "8080:8080"
       - "50000:50000"
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
   applauncher:
     build: AppLauncher
@@ -40,12 +28,9 @@ services:
       - ARTIFACTORY_PASSWORD=${ARTIFACTORY_PASSWORD}
       - DOCKER_HUB_USER=${DOCKER_HUB_USER}
       - DOCKER_HUB_PASSWORD=${DOCKER_HUB_PASSWORD}
+      - STACK_LIST_URL={STACK_LIST_URL}
     depends_on:
       - jenkins
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
@@ -53,10 +38,6 @@ services:
       - artifactory-data:/var/opt/jfrog/artifactory/data 
       - artifactory-logs:/var/opt/jfrog/artifactory/logs 
       - artifactory-etc:/var/opt/jfrog/artifactory/etc 
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
   nginx-proxy:
     build: nginx-proxy
@@ -68,10 +49,6 @@ services:
       - artifactory
       - welcomepage
       - adminpage
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: ${LOGSTASH_URL}
 
 volumes:
   jenkins:
