--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,17 @@ version: "3.1"
 services:
   welcomepage:
     build: welcomepage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   adminpage:
     build: adminpage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   jenkins:
     image: jenkins
@@ -16,6 +24,10 @@ services:
     ports:
       - "8080:8080"
       - "50000:50000"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   applauncher:
     build: AppLauncher
@@ -31,6 +43,10 @@ services:
       - STACK_LIST_URL={STACK_LIST_URL}
     depends_on:
       - jenkins
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
@@ -38,6 +54,10 @@ services:
       - artifactory-data:/var/opt/jfrog/artifactory/data 
       - artifactory-logs:/var/opt/jfrog/artifactory/logs 
       - artifactory-etc:/var/opt/jfrog/artifactory/etc 
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   nginx-proxy:
     build: nginx-proxy
@@ -49,6 +69,10 @@ services:
       - artifactory
       - welcomepage
       - adminpage
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
 volumes:
   jenkins:
