--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -9,6 +9,7 @@ server {
 
     location / {
 
+        add_header 'Access-Control-Allow-Origin' *;
         proxy_pass http://jenkins:8080;
         proxy_set_header Host $host;
 
@@ -57,6 +58,7 @@ server {
 
     location /applauncher/ {
 
+        add_header 'Access-Control-Allow-Origin' *;
         rewrite /applauncher/(.*) /$1 break;
         proxy_pass http://applauncher:5000;
         proxy_set_header Host $host;
