added infra launch

--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -26,11 +26,32 @@ server {
         proxy_redirect http:// https://;
     }
 
+    location /launchproxy/ {
+        # NOTE: remove the rewrite rule for home, 
+        #       when the welcomepage replaces jenkins in the root 
+        rewrite /launchproxy/(.*) /$1 break;
+        proxy_pass http://54.69.65.131:5000;
+
+        proxy_set_header Host $host;
+
+        # re-write redirects to http as to https, example: /home
+        proxy_redirect http:// https://;
+    }
+
     location /home/ {
         # NOTE: remove the rewrite rule for home, 
         #       when the welcomepage replaces jenkins in the root 
         rewrite /home/(.*) /$1 break;
         proxy_pass http://welcomepage:80;
+        proxy_set_header Host $host;
+
+        # re-write redirects to http as to https, example: /home
+        proxy_redirect http:// https://;
+    }
+
+    location /stackmanagement/ {
+        rewrite /stackmanagement/(.*) /$1 break;
+        proxy_pass http://stackmanagement;
         proxy_set_header Host $host;
 
         # re-write redirects to http as to https, example: /home
