--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -30,7 +30,7 @@ server {
         # NOTE: remove the rewrite rule for home, 
         #       when the welcomepage replaces jenkins in the root 
         rewrite /launchproxy/(.*) /$1 break;
-        proxy_pass http://54.69.65.131:5000;
+        proxy_pass http://dockerservices.com:55000;
 
         proxy_set_header Host $host;
 
