--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,21 +51,27 @@ services:
         gelf-address: "${LOGSTASH_URL}"
 
   agilecloudframework:
-    build: 
+    build:
       context: AgileCloudFramework
     logging:
       driver: "gelf"
       options:
         gelf-address: "${LOGSTASH_URL}"
-    # NOTE: no depends_on is set yet
-    # NOTE: not part of nginx proxy yet
+
+  fileserver:
+    build:
+      context: GithubAdapter
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${LOGSTASH_URL}"
 
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
     volumes:
-      - artifactory-data:/var/opt/jfrog/artifactory/data 
-      - artifactory-logs:/var/opt/jfrog/artifactory/logs 
-      - artifactory-etc:/var/opt/jfrog/artifactory/etc 
+      - artifactory-data:/var/opt/jfrog/artifactory/data
+      - artifactory-logs:/var/opt/jfrog/artifactory/logs
+      - artifactory-etc:/var/opt/jfrog/artifactory/etc
     logging:
       driver: "gelf"
       options:
