--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,10 +63,10 @@ services:
       context: GithubAdapter
     volumes:
       - ${HOME}/config/GithubAdapter-config.json:/src/config.json
-    logging:
-      driver: "gelf"
-      options:
-        gelf-address: "${LOGSTASH_URL}"
+    #logging:
+    #  driver: "gelf"
+    #  options:
+    #    gelf-address: "${LOGSTASH_URL}"
 
   artifactory:
     image: docker.bintray.io/jfrog/artifactory-oss:latest
